[gd_scene load_steps=3 format=3 uid="uid://cu3xjbg84fq7j"]

[ext_resource type="Script" path="res://grid.gd" id="1_1wjnd"]
[ext_resource type="Script" path="res://diamond_scene.gd" id="1_q05t6"]

[node name="Margins" type="MarginContainer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 20
script = ExtResource("1_q05t6")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2
alignment = 1

[node name="Label" type="Label" parent="VBoxContainer/HBoxContainer"]
layout_mode = 2
text = "Grid width (must be odd): "

[node name="SliderValueLabel" type="Label" parent="VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(30, 0)
layout_mode = 2
text = "5"

[node name="GridWidthSlider" type="HSlider" parent="VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(200, 0)
layout_mode = 2
size_flags_vertical = 4
min_value = 1.0
max_value = 11.0
step = 2.0
value = 5.0
rounded = true

[node name="CenterContainer" type="CenterContainer" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="DiamondGrid" type="GridContainer" parent="VBoxContainer/CenterContainer"]
unique_name_in_owner = true
layout_mode = 2
script = ExtResource("1_1wjnd")
